# application-services

./: .buildconfig-android.yml  .cron.yml  .detekt.yml  .editorconfig  .gitignore  .gitmodules  .mailmap  .mergify.yml  .swiftlint.yml  .taskcluster.yml  .travis.yml  CHANGELOG.md  CHANGES_UNRELEASED.md  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Cartfile  Cartfile.resolved  DEPENDENCIES.md  Functions.html  README.md  Structs.html  build-carthage.sh  build.gradle  build.rs  codecov.yml  detekt-baseline.xml  dev.sh  diff.txt  gradle.properties  gradlew  index.html  install-nimbus-cli.sh  ktlint-baseline.xml  logins.db.backup  main.kt  moz.build  pkcs11.txt  proguard-rules-consumer-jna.pro  publish.gradle  (+7 more)
boxlocker/: .gitignore  Cargo.toml  README.md  boxlocker.py  requirements.txt
boxlocker/src/: main.rs
components/ac_log/: Cargo.toml
components/ac_log/src/: lib.rs
components/accounts/: Cargo.toml  build.rs
components/accounts/android/: build.gradle
components/accounts/ffi/: Cargo.toml
components/accounts/src/: accounts_msg_types.proto  ffi.rs  lib.rs
components/ads-client/: ARCHITECTURE.md  Cargo.toml  README.md  metrics.yaml  openapi.json  uniffi.toml
components/ads-client/android/: build.gradle
components/ads-client/docs/: building-locally-for-android.md  usage-javascript.md  usage-kotlin.md  usage-swift.md  usage.md
components/ads-client/integration-tests/: Cargo.toml
components/ads-client/src/: client.rs  clock.rs  error.rs  experiments.rs  ffi.rs  http_cache.rs  impression_log.rs  instrument.rs  lib.rs  mars.rs  models.rs  telemetry.rs  test_utils.rs
components/ads-client/tests/: integration_test.rs
components/as-ohttp-client/: Cargo.toml  build.rs  uniffi.toml
components/as-ohttp-client/src/: as_ohttp_client.udl  lib.rs
components/autofill/: Cargo.toml  build.rs  foo.diff  uniffi.toml
components/autofill/android/: build.gradle
components/autofill/cli/: Cargo.toml
components/autofill/sql/: create_shared_schema.sql  create_shared_triggers.sql  create_sync_temp_tables.sql
components/autofill/src/: api.rs  autofill.udl  db.rs  encryption.rs  error.rs  lib.rs  name_utils.rs  schema.rs  store.rs
components/autofill/sync/: mod.rs
components/breach-alerts/: Cargo.toml  README.md
components/breach-alerts/sql/: create_schema.sql
components/breach-alerts/src/: api.rs  db.rs  error.rs  lib.rs  schema.rs  store.rs
components/context_id/: Cargo.toml  uniffi.toml
components/context_id/src/: callback.rs  error.rs  lib.rs  mars.rs
components/crashtest/: Cargo.toml  README.md  build.rs  uniffi.toml
components/crashtest/android/: build.gradle
components/crashtest/src/: crashtest.udl  lib.rs  tests.rs
components/crypto_traits/: Cargo.toml
components/crypto_traits/src/: aead.rs  agreement.rs  digest.rs  ece.rs  error.rs  hawk.rs  hkdf.rs  hmac.rs  lib.rs  rand.rs
components/example/: Cargo.toml  uniffi.toml
components/example/src/: README.md  db.rs  error.rs  http.rs  lib.rs  schema.rs
components/fairy-bridge/: Cargo.toml  README.md
components/fairy-bridge/c-backend-include/: fairy_bridge.h
components/fairy-bridge/src/: backend.rs  error.rs  headers.rs  lib.rs  (+1 more)
components/filter_adult/: Cargo.toml
components/fxa-client/: Cargo.toml  README.md  build.rs  fxa-client.idl  uniffi.toml
components/init_rust_components/: Cargo.toml  README.md  uniffi.toml
components/logins/: :wipe_local_memory:  Cargo.toml  README.md  build.rs  metrics.yaml  uniffi.toml
components/mac/: Cargo.toml  README.md  uniffi.toml
experiments/: Cargo.toml  README.md  build.rs
experiments/examples/: README.md  experiment.rs
experiments/src/: config.rs  error.rs  evaluator.rs  http_client.rs  lib.rs  matcher.rs  nimbus.idl  persistence.rs  sampling.rs  uuid.rs
ffi-megazord/: Cargo.toml
ffi-megazord/src/: lib.rs
fxa-client/: Cargo.toml
fxa-client/examples/: send_tab_demo.rs
fxa-client/ffi/: Cargo.toml  README.md  cbindgen.toml
fxa-client/src/: config.rs  errors.rs  ffi.rs  http_client.rs  lib.rs  login_sm.rs  scoped_keys.rs  scopes.rs  state_persistence.rs  util.rs
fxa-rust-client/: .gitignore  Cargo.toml
fxa-rust-client/ffi/: Cargo.toml  README.md
fxa-rust-client/src/: config.rs  errors.rs  lib.rs  login_sm.rs  oauth.rs  scoped_keys.rs  util.rs
logins/: Cargo.toml
logins-sql/: Cargo.toml
logins-sql/examples/: sync_pass_sql.rs
logins-sql/ffi/: Cargo.toml
logins-sql/src/: db.rs  engine.rs  error.rs  ffi.rs  lib.rs  login.rs  schema.rs  update_plan.rs  util.rs
logins/src/: credentials.rs  errors.rs  json.rs  lib.rs  passwords.rs  types.rs  vocab.rs
nimbus/: Cargo.toml  build.rs
nimbus/examples/: README.md  experiment.rs
nimbus/src/: config.rs  dbcache.rs  enrollment.rs  error.rs  evaluator.rs  http_client.rs  lib.rs  matcher.rs  nimbus.idl  persistence.rs  sampling.rs  updating.rs
nimbus/tests/: test_fs_client.rs  test_get_exp_branch.rs  test_get_experiment_branch_by_feature.rs  test_get_experiment_branch_by_id.rs  test_updates.rs
places/: Cargo.toml  README.md
places-tool/: Cargo.toml
places-tool/src/: anonymize.rs  find_db.rs  initial-data.edn  main.rs  places-schema.edn  to_mentat.rs
places/examples/: autocomplete.rs
places/src/: db.rs  error.rs  frecency.rs  lib.rs  observation.rs  schema.rs  storage.rs  types.rs  util.rs
rust-cjose/: .gitignore  Cargo.toml  build.rs
rust-cjose/.cargo/: config
rust-cjose/android/: README.md  cargo-config.toml.template  create-ndk-standalone.sh
rust-cjose/examples/: main.rs
rust-cjose/src/: lib.rs
sendtab-proto/: Cargo.toml
sendtab-proto/src/: main.rs
sync15-adapter/: Cargo.toml  password-engine.json
sync15-adapter/examples/: boxlocker-parity.rs  sync-pass.rs
sync15-adapter/ffi/: Cargo.toml  README.md  cbindgen.toml  sync_adapter.h
sync15-adapter/src/: bso_record.rs  changeset.rs  client.rs  collection_keys.rs  collections.rs  driver.rs  error.rs  key_bundle.rs  lib.rs  record_id.rs  record_types.rs  request.rs  service.rs  state.rs  state_machine.rs  storage_client.rs  sync.rs  sync_multiple.rs  sync_stateful.rs  token.rs  tombstone.rs  util.rs
(+27061 files in other folders)
