[package]
name = "boxlocker"
version = "0.1.0"
authors = ["Ryan Kelly <ryan@rfk.id.au>"]

[dependencies]
reqwest = "0.8.5"
rust-crypto = "0.2.36"
hex = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hawk = "1.0.2"
simple-error = "0.1.10"
hyper = "0.11.24"
base64 = "0.9.0"
prettytable-rs = "^0.6"
