[package]
name = "experiments"
version = "1.0.0"
authors = ["The Glean Team <glean-team@mozilla.com>", "The Sync Team <sync-team@mozilla.com>"]
edition = "2018"
description = "A rapid experiment library"
repository = "https://github.com/mozilla/nimbus-sdk"
readme = "README.md"
license = "MPL-2.0"
keywords = ["experiment"]

[lib]
name = "experiments"
crate-type = ["lib"]

[dependencies]
anyhow = "1"
