[package]
name = "experiments"
version = "1.0.0"
authors = ["The Glean Team <glean-team@mozilla.com>", "The Sync Team <sync-team@mozilla.com>"]
edition = "2018"
description = "A rapid experiment library"
repository = "https://github.com/mozilla/nimbus-sdk"
readme = "README.md"
license = "MPL-2.0"
keywords = ["experiment"]

[lib]
name = "experiments"
crate-type = ["lib"]

[dependencies]
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
# Viaduct locked to version 61.0.10 of Application Services
viaduct = { git = "https://github.com/mozilla/application-services",  rev = "2478bcf2b48d1867b01e8b7df4f86a69d564d49a"}
thiserror = "1"
chrono = { version = "0.4", features = ["serde"]}
url = "2.1"
rkv = "0.10"
jexl-eval = "0.1.6"
uuid = { version = "0.8", features = ["serde", "v4"]}
sha2 = "0.9"
hex = "0.4"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "686a8ec672cb6b86a6de920c43ff2d5678afd84a" }

[build-dependencies]
uniffi_build = { git = "https://github.com/mozilla/uniffi-rs", rev = "686a8ec672cb6b86a6de920c43ff2d5678afd84a", features=["builtin-bindgen"] }

[dev-dependencies]
viaduct-reqwest = { git = "https://github.com/mozilla/application-services",  rev = "2478bcf2b48d1867b01e8b7df4f86a69d564d49a"}
mockito = "0.27"
env_logger = "0.7"
clap = "2.33.3"
