[package]
name = "fxa-client"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]

[dependencies]
base64 = "0.9.3"
byteorder = "1.2.6"
failure = "0.1.2"
failure_derive = "0.1.2"
hawk = { git = "https://github.com/eoger/rust-hawk", branch = "use-ring-latest", optional = true }
hex = "0.3.2"
lazy_static = "1.0.0"
log = "0.4.5"
openssl = { version = "0.10.12", optional = true }
regex = "1.0.0"
reqwest = "0.9.1"
ring = "0.13.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
untrusted = "0.6.2"
url = "1.7.1"

[features]
browserid = ["openssl", "hawk"]
