[package]
name = "fxa-client"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]

[dependencies]
base64 = "0.9.3"
byteorder = "1.2.6"
ece = {git = "https://github.com/eoger/rust-ece"}
failure = "0.1.3"
failure_derive = "0.1.3"
ffi-support = { path = "../components/support/ffi", optional = true }
hawk = { version = "1.0.4", optional = true }
hex = "0.3.2"
lazy_static = "1.0.0"
log = "0.4.5"
openssl = { version = "0.10.12", optional = true }
regex = "1.0.0"
reqwest = "0.9.1"
ring = "0.13.5"
serde = { version = "1.0.79", features = ["rc"] }
serde_derive = "1.0.79"
serde_json = "1.0.28"
sync15-adapter = { path = "../sync15-adapter" }
untrusted = "0.6.2"
url = "1.7.1"

[dev-dependencies]
dialoguer = "0.1.0"
text_io = "0.1.7"
webbrowser = "0.3.1"

[features]
browserid = ["openssl", "hawk"]
ffi = ["ffi-support"]
default = ["ffi"]
