[package]
name = "fxa-client"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]

[dependencies]
base64 = "0.9.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.6.0"
reqwest = "0.8.2"
hex = "0.3.1"
hkdf = "0.4"
hmac = "0.6.2"
sha2 = "0.7.0"
# Replace with our openssl fork (https://github.com/eoger/rust-hawk/tree/use-openssl)
# once openssl doesn't direct to a git repo.
hawk = { git = "https://github.com/eoger/rust-hawk", branch = "use-ring-master" }
error-chain = "0.11.0"
openssl = { git = "https://github.com/sfackler/rust-openssl", rev = "24ece94" }

[workspace]
members = ["ffi"]

[dev-dependencies]
ring = "0.13.0-alpha"
