[package]
name = "fxa-client"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]

[dependencies]
base64 = "0.9.0"
error-chain = "0.11.0"
hawk = { git = "https://github.com/eoger/rust-hawk", branch = "use-openssl" }
hex = "0.3.1"
hkdf = "0.4"
hmac = "0.6.2"
jose = { git = "https://github.com/eoger/rust-jose" }
lazy_static = "1.0.0"
log = "0.4"
openssl = "0.10.7"
rand = "0.5.0-pre.1"
regex = "1.0.0"
reqwest = "0.8.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
url = "1.6.0"
