[package]
name = "logins-sql"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
sync15-adapter = { path = "../sync15-adapter" }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
log = "0.4.5"
lazy_static = "1.1.0"
url = "1.7.1"
failure = "0.1.2"
failure_derive = "0.1.2"

[dependencies.rusqlite]
version = "0.14.0"
features = ["sqlcipher", "limits"]

[dev-dependencies]
more-asserts = "0.2.1"
env_logger = "0.5.13"
prettytable-rs = "0.7.0"
fxa-client = { path = "../fxa-client" }
webbrowser = "0.3.1"
chrono = "0.4.6"
clap = "2.32.0"
