[package]
name = "logins"
version = "0.0.1"

[lib]
name = "logins"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
lazy_static = "0.2"
log = "0.4"

serde = "^1.0.63"
serde_derive = "^1.0.63"
serde_json = "1.0"

[dependencies.mentat]
git = "https://github.com/mozilla/mentat"
tag = "v0.8.1"
features = ["sqlcipher"]
default_features = false
