[package]
name = "places"
version = "0.1.0"
authors = []

[dependencies]
sync15-adapter = { path = "../sync15-adapter" }
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
log = "0.4.4"
lazy_static = "1.1.0"
url = "1.7.1"
failure = "0.1"
failure_derive = "0.1"
unicode-segmentation = "1.2.1"
caseless = "0.2.1"
unicode-normalization = "0.1.7"

[dependencies.rusqlite]
version = "0.14.0"
features = ["sqlcipher", "functions"]

[dev-dependencies]
more-asserts = "0.2.1"
env_logger = "0.5.13"
chrono = "0.4.6"
find-places-db = "0.1.0"
clap = "2.32.0"
tempfile = "3.0.4"
rand = "0.5.5"

# While we don't have a replacement for termion on Windows yet (and thus
# our example doesn't work on Windows), it does get further in the compilation
# such that "cargo test" etc shows errors in our code rather than in termion.
[target.'cfg(not(windows))'.dev-dependencies]
termion = "1.5.1"
