[package]
name = "jose_c"
version = "0.1.0"
authors = ["vladikoff <vlad.filippov@gmail.com>"]

[lib]
name = "jose_c"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]
#crate-type = ["dylib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3.9"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
