[package]
name = "sync15-adapter"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
base64 = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.6.0"
reqwest = "0.8.2"
error-chain = "0.11"
openssl = "0.10"
hawk = "1.0"
hyper = "0.11"
log = "0.4"
