[package]
name = "sync15-adapter"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
base64 = "0.9.0"
serde = "^1.0.63"
serde_derive = "^1.0.63"
serde_json = "1.0"
url = "1.6.0"
reqwest = "0.8.2"
openssl = "0.10.7"
hawk = { git = "https://github.com/eoger/rust-hawk", branch = "use-openssl" }
hyper = "0.11"
log = "0.4"
lazy_static = "1.0"
base16 = "0.1"
failure = "= 0.1.1"
failure_derive = "= 0.1.1"

[dev-dependencies]
env_logger = "0.5"
prettytable-rs = "0.6"
fxa-client = { path = "../fxa-client" }

[[example]]
name = "sync-pass"
