[package]
name = "ac_log"
version = "0.1.0"
edition = "2018"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[lib]
name = "ac_rust_log"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
log = { version = "0.4.6", features = ["std"] }
ffi-support = { path = "../support/ffi" }
lazy_static = "1.2.0"
