[package]
name = "accounts"
edition = "2018"
version = "0.1.0"
authors = ["application-services@mozilla.com"]
license = "MPL-2.0"

[dependencies]
log = "0.4.8"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
fxa-client = { path = "../fxa-client" }
ffi-support = { path = "../support/ffi" }
error-support = { path = "../support/error" }

[build-dependencies]
prost-build = "0.5"
