[package]
name = "ads-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
chrono = "0.4"
context_id = { path = "../context_id" }
error-support = { path = "../support/error" }
parking_lot = "0.12"
rusqlite = { version = "0.37.0", features = [
    "functions",
    "bundled",
    "serde_json",
    "unlock_notify",
] }
serde = "1"
serde_json = "1"
thiserror = "2"
uniffi = { version = "0.29.0" }
url = "2"
uuid = { version = "1.3", features = ["v4"] }
viaduct = { path = "../viaduct" }
sql-support = { path = "../support/sql" }

[dev-dependencies]
mockall = "0.12"
mockito = { version = "0.31", default-features = false }
viaduct-dev = { path = "../support/viaduct-dev" }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
