[package]
name = "ads-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[features]
dev = []
default = []

[dependencies]
chrono = "0.4"
context_id = { path = "../context_id" }
error-support = { path = "../support/error" }
once_cell = "1.5"
parking_lot = "0.12"
rusqlite = { version = "0.37.0", features = [
  "functions",
  "bundled",
  "serde_json",
  "unlock_notify",
] }
serde = "1"
serde_json = "1"
sql-support = { path = "../support/sql" }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "registry",
  "std",
] }
uniffi = { version = "0.29.0" }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
viaduct = { path = "../viaduct" }

[dev-dependencies]
mockall = "0.12"
mockito = { version = "0.31", default-features = false }
viaduct-dev = { path = "../support/viaduct-dev" }
viaduct-reqwest = { path = "../support/viaduct-reqwest" }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
