[package]
name = "ads-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[features]
dev = []
default = []

[dependencies]
chrono = "0.4"
context_id = { path = "../context_id" }
error-support = { path = "../support/error" }
parking_lot = "0.12"
rusqlite = { version = "0.37.0", features = [
  "functions",
  "bundled",
  "serde_json",
  "unlock_notify",
] }
serde = "1"
serde_json = "1"
thiserror = "2"
once_cell = "1.5"
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "106e12ae2a0474a1880667ed3a4b050fcf1c6666" }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
viaduct = { path = "../viaduct" }
sql-support = { path = "../support/sql" }

[dev-dependencies]
mockall = "0.12"
mockito = { version = "0.31", default-features = false }
viaduct-dev = { path = "../support/viaduct-dev" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "106e12ae2a0474a1880667ed3a4b050fcf1c6666", features = ["build"] }
