[package]
name = "autofill"
edition = "2021"
version = "0.1.0"
authors = ["application-services@mozilla.com"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
error-support = { path = "../support/error" }
interrupt-support = { path = "../support/interrupt" }
jwcrypto = { path = "../support/jwcrypto" }
lazy_static = "1.4"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
sql-support = { path = "../support/sql" }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random", "serde_support"] }
sync15 = { path = "../sync15", features = ["sync-engine"] }
thiserror = "1.0"
types = { path = "../support/types" }
uniffi = "0.23"
url = { version = "2.2", features = ["serde"] }

[dependencies.rusqlite]
version = "0.28.0"
features = ["functions", "bundled", "serde_json", "unlock_notify"]

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
libsqlite3-sys = "0.25.2"

[build-dependencies]
nss_build_common = { path = "../support/rc_crypto/nss/nss_build_common" }
uniffi = { version = "0.23", features = ["build"] }
